# SemanticComplexityBrainActivity

./: .gitignore  LICENSE  README.md  experiment_subject_list.py  figures.py  generate_group_voxelwise_maps.py  neuroimage_fmri_analysis.py  pyproject.toml  requirements.txt  semantic_baseline_regressors.py  visualize_top_voxelwise.py
configs/: __init__.py  selected_stories.txt  stories_all.py  stories_small.py  stories_template.py
data/lucy/: task-lucy_events.tsv
docs/: ANALYSIS_NOTES.md  CHOOSING_8_STORIES.md  DATA_DOWNLOAD.md  PROJECT_STRUCTURE.md
results/: README.md
results/csv/: lag_tuning_curves(-2,6).csv  lag_tuning_curves.csv  lag_tuning_curvesOld.csv  roi_language_correlation_summary(-2,6).csv  roi_language_correlation_summary.csv  roi_language_correlation_summaryOld.csv
results/figures/: README.md
results/final_tables/: FINAL_RESULTS_SUMMARY.md  table1_dataset_story_counts.csv  table1b_motion_qc_summary.csv  (+12 more)
scripts/: audit_results.py  build_subject_list.py  build_subject_list_fmriprep.py  build_subject_list_from_openneuro.py  download_fmriprep_selected.py  download_narratives_data.py  download_selected_stories.py  figures_revision.py  final_paper_figures.py  final_roi_brain_map.py  final_stats_and_tables.py  gpt2_layer_pc_analysis.py  make_figures.py  motion_qc_from_confounds.py  print_cleaning_strategy.py  print_timing_strategy.py  roi_encoding_model_comparison.py  run_main_analysis.py  run_revision_pipeline.py  scan_story_candidates.py  semantic_baseline_regressors.py  shared_pca_regressors.py  validate_gentle_timing.py
(+2 files in other folders)
